Fix camel cursor when last word is of one letter only

BUG: 448692